# rust-weechat

crates/weechat/examples/mls/: Cargo.toml  Makefile  README.md
crates/weechat/examples/mls/src/: lib.rs
